# avatar-max

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOs.md  add_email_columns.py  app.py  app.yaml  app_requirements.md  config.py  database.py  databricks_claude.py  fal_service.py  hello.py  image_generator.py  logo_overlay.py  prepare_logo.py  pyproject.toml  quality_check.py  quality_commentary.py  requirements.txt  test_volume_write.py  utils.py
.claude/: CLAUDE.md
.databricks/sync-snapshots/: be94db95f6631e58.json
assets/: styles.css
email_service/: EMAIL_SERVICE.md  README.md  __init__.py  brevo_service.py  db_manager.py  models.py
email_service/jobs/: DATABRICKS_DEPLOYMENT.md  databricks_job_config.json  databricks_job_setup.py  email_job_config.json  process_email_queue.py  process_email_queue_notebook.py
email_service/templates/: avatar_email.html  avatar_email.txt
email_service/tests/: test_email_manual.py  test_email_service.py
qr_service/: QR_CODE_SETUP.md  __init__.py  gcs_uploader.py  qr_generator.py
tests/: README_CLAUDE_TESTS.md  test_app.py  test_claude_manual.py  test_claude_quality.py  test_config.py  test_fal_integration.py  test_fal_simple.py  test_image_generator.py  test_utils.py
tests/deprecated/: test_manual_pruna.py  test_prunaai_model.py
